# RAG

./: .gitignore  Dockerfile.api  README.md  baseline_experiments.ipynb  create_collection.py  create_test_set.ipynb  docker-compose.embed.yaml  docker-compose.eval.yaml  docker-compose.eval_1.yaml  docker-compose.eval_2.yaml  docker-compose.rerank.yaml  docker-compose.yaml  examples.ipynb  exps.ipynb  metrics.ipynb  pyproject.toml  rag_exp_new.ipynb  requirements-api.txt
api/: bot.py  server.py
archive/: create_collection.py  docker-compose.embed.yaml  docker-compose.eval.yaml  docker-compose.harr.yaml  docker-compose.tei.yaml  example.ipynb  examples_usage.py  experimets.ipynb  for_llm.ipynb  functions.py  ragas_eval.py
context/: docs_questions_3.jsonl  docs_questions_qwen3_14b_awq.jsonl  docs_questions_qwen3_4b_fp8.jsonl  llm_questions  ques_true_ans.txt
data1/: QuestionsWithTrueAnswers.txt  example.txt  оферта WB.odt
exp_results/: F2LLM-v2-0.6B_hier_small.csv  bge_m3_hier_small.csv  exp1_chunk_size.csv  exp2_overlap.csv  exp3.csv  exp3_hier_very_small.csv  exp3_splitters.csv  harr_0.6b_hier_small.csv  jina-embeddings-v3_hier_small.csv
experiments/: create_collections.ipynb  metrics.ipynb  overlap_create_colls.ipynb  rag_exp.py  rag_exp_new.py  rag_experiment.py
new_results/: F2LLM-v2-0.6B-jinav3rerank.csv  F2LLM-v2-0.6B-rerank.csv  Qwen3-Embedding-0.6B-jinav3rerank.csv  Qwen3-Embedding-0.6B-qwen3rerank.csv  Qwen3-Embedding-0.6B-rerank.csv  bge-m3+bm25+jinav3_rerank.csv  bge-m3+bm25.csv  bge-m3-jinav3rerank.csv  bge-m3-rerank.csv  chunk_size.csv  hiers.csv  (+17 more)
(+20 files in other folders)
