[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "fastembed-gpu>=0.7.4",
    "llama-index>=0.14.16",
    "llama-index-embeddings-fastembed>=0.5.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-text-embeddings-inference>=0.5.0",
    "llama-index-llms-huggingface>=0.6.1",
    "llama-index-llms-openai-like>=0.7.0",
    "llama-index-vector-stores-qdrant>=0.9.2",
    "qdrant-client>=1.17.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
experiments = [
    "google-genai>=1.66.0",
]
jupiter = [
    "ipykernel>=7.2.0",
]
service = [
    "celery>=5.6.2",
    "flower>=2.0.1",
    "redis>=7.3.0",
]
visual = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
